# crawler

./: .geminiignore  .gitignore  CHARACTER_CHRONICLES.md  CHARACTER_POSTURES.md  COGNITIVE_INSTINCTS.md  EVOLUTIONARY_RETROSPECTIVE.md  FOSSIL_RECORD.md  GEMINI.md  README.md  SCHEMA_DEPENDENCY_FOREST.md  SPARK_CHRONICLES.md  active_scan.list  ain_list.txt  debug_html.py  debug_javbus.py  debug_javbus_html.py  debug_magnets.py  debug_page.html  debug_parse.py  discover_site_config.py  download_actor_covers.py  find_star.py  fix.py  fix_crawler_v11.py  fix_crawler_v12.py  fix_crawler_v13.py  fix_crawler_v14.py  fix_crawler_v16.py  fix_crawler_v19.py  fix_crawler_v20.py  fix_crawler_v21.py  fix_crawler_v4.py  fix_crawler_v5.py  fix_crawler_v7.py  fix_fidelity.py  genesis-surveyor.skill  javbus_home.html  javbus_search.html  manifold-compressor.skill  native_magnet_process.py  (+24 more)
config/browser_profile/: ChromeFeatureState  Local State  SingletonCookie  SingletonLock  SingletonSocket
evolutionary-seed/: ARCHITECTURE_TRAIL.md  GEMINI.md  METABOLIC_LEDGER.md  README.md  SCHEMA_DEPENDENCY_FOREST.md
manifold-compressor/: SKILL.md
manifold-compressor/references/: refactor_patterns.md
reaction-simulator/: SKILL.md
scar-archivist/: SKILL.md
scripts/: debug_actress_extraction.py  deluge_filter.py  filter_already_downloaded.py  fix_actress_profiles.py  fix_actress_wikipedia.py  group_magnets.py  maintenance_filter_magnets.py  merge_alias.py  rebuild_ain_list.py  rename_tool.py  test_models.py
src/crawler/: main.py  (+3 more)
tools/: check_basement.py  project_forest.py  record_scar.py
(+277 files in other folders)
